refactor: modernize output package to Java 8
FileReportWriter: use try-with-resources for the FileInputStream in
writeToWriter(). FormatInfoRegistry: use the diamond operator for
FORMAT_INFO, and replace the deprecated Class.newInstance() with
Class.getDeclaredConstructor().newInstance() in both
getExporterInstance() and getLayoutManagerInstance(). Kept
getExporterInstance()'s return type as JR 6's JRExporter (source
branch, on JR 7, changed it to the newer Exporter interface, which
does not apply here). Source-only subset of 2278ca3
(src/main/java/.../output/*).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>